SQLite output through pandas

--- a/pax/config/Reprocess.ini
+++ b/pax/config/Reprocess.ini
@@ -29,6 +29,7 @@ fields_to_ignore = ['occurrences',
                     'channel_waveforms',
                     'all_channel_peaks',
                     'raw_data',
+                    'channel_peaks',            # Useful, but takes a LOOOT of space
                     'area_per_channel',         # Useful, but takes a LOT of space
                     'does_channel_have_noise',  # Takes little disk space, but a lot of memory
                     'does_channel_contribute',  # Same here
