--- a/pax/config/Reprocess.ini
+++ b/pax/config/Reprocess.ini
@@ -10,8 +10,8 @@ input = 'BulkOutput.ReadFromBulkOutput'
 output = 'BulkOutput.BulkOutput'
 
 [BulkOutput.ReadFromBulkOutput]
-format = 'hdf5'                 # Format of file to read in
-input_name = 'output.hdf5'      # Input file name, with extension
+format = 'sql'                 # Format of file to read in
+input_name = 'sqlite:///test_output.db'      # Input file name, with extension
 
 chunk_size = 200                # Read in this many instances at a time from the file
 
