--- a/pax/config/SQL.ini
+++ b/pax/config/SQL.ini
@@ -5,6 +5,12 @@ input = 'XED.XedInput'
 
 [BulkOutput.BulkOutput]
 output_format = "sql"
+write_every = 1
+
+# This gets passed to the sqlalchemy engine creation
+# See http://docs.sqlalchemy.org/en/rel_0_9/core/engines.html
+#output_name = "sqlite:///test_output.db"
+output_name = "mysql+pymysql://xams_user:lxetpc@145.102.134.133/xams"
 
 # Keep only high-level data
 fields_to_ignore = ['occurrences',
@@ -19,4 +25,5 @@ fields_to_ignore = ['occurrences',
                     'is_channel_suspicious',
                     'n_hits_rejected',
                     'noise_pulses_in',
+                    'pax_info',
                    ]
