--- a/pax/config/XENON100.ini
+++ b/pax/config/XENON100.ini
@@ -36,30 +36,11 @@ transform = [
 
 
 [HitFinder.FindHits]
-# Minimum sigma's above noise level for an excess in a channel to be regarded as a hit:
-peak_minimum_sigma = 6      # 8 sigma gives too many missed hits
-
-# Initial guess for the digitizer baseline during this occurrence; will be refined during hitfinding.
-baseline_guess = 16000   # ADC-counts
-
-# Initial guess for the noise_sigma; will be refined during hitfinding.
-# If set too high, peaks may not get found; if set too low, spurious peaks may be found in noise.
-noise_sigma_guess = 10   # ADC-counts -- not pe/bin anymore!!
-
 # Output peakfinder diagnostic plots to directory
 # Warning: this will produce LOTS of plots, processing will be EXTREMELY SLOW
 # That's why they're called diagnostic plots...
-make_diagnostic_plots = 'never'                 #'always', 'never' (default), or 'no peaks'
+make_diagnostic_plots = 'never'                 #'always', 'never' (default), 'no peaks', or 'tricky cases'
 make_diagnostic_plots_in = 'diagnostic_plots'
-
-# The algorithm refines its noise_sigma by excluding all samples part of a peak.
-# Then peakfinding is repeated, then noise_sigma finding, etc.
-# Usually this process is self-stabilizing, so it rarely takes more than 3 or 4 passes.
-# Occasionally we never settle on peaks and the noise_sigma remains oscillatory.
-# Usually this is one or two samples bouncing in an and of a peak boundary.
-# To protect against infinite loops, if more than the below number of passes have been done,
-# no new pass is started.
-max_passes = 20
 
 # Max hits to look for in each pulse: rest will be ignored
 # After large peaks the zero-length encoding can fail, making a huge pulse with many hits
@@ -67,6 +48,23 @@ max_passes = 20
 # If set too high, it will degrade performance (though the effect appears to be small)
 # Don't set to infinity though: we need to allocate memory for this...
 max_hits_per_pulse = 500
+
+# Truncated Gauss filter
+detection_threshold_filter = [ 0.02416583,  0.02566924,  0.02715293,  0.02860307,  0.0300055 ,
+        0.03134595,  0.03261027,  0.03378467,  0.03485598,  0.03581188,
+        0.03664118,  0.03733395,  0.03788182,  0.03827807,  0.0385178 ,
+        0.03859805,  0.0385178 ,  0.03827807,  0.03788182,  0.03733395,
+        0.03664118,  0.03581188,  0.03485598,  0.03378467,  0.03261027,
+        0.03134595,  0.0300055 ,  0.02860307,  0.02715293,  0.02566924,
+        0.02416583]
+dynamic_threshold_multiplier = 9
+base_threshold = 2    # noise sigmas
+bound_threshold = 1   # noise sigmas
+
+# Will linearly "detrend" baseline of each pulse during processing
+# Usually tiny effect
+detrend_baseline = False
+
 
 
 [Cluster]
