Use negative samples in entire pulse for noise level.

--- a/pax/config/XENON100.ini
+++ b/pax/config/XENON100.ini
@@ -40,7 +40,7 @@ transform = [
 # Warning: this will produce LOTS of plots, processing will be EXTREMELY SLOW
 # That's why they're called diagnostic plots...
 make_diagnostic_plots = 'never'                 #'always', 'never' (default), 'no peaks', or 'tricky cases'
-make_diagnostic_plots_in = 'diagnostic_plots'
+make_diagnostic_plots_in = 'diagnostic_plots_event29_newhitf2'
 
 # Max hits to look for in each pulse: rest will be ignored
 # After large peaks the zero-length encoding can fail, making a huge pulse with many hits
@@ -57,13 +57,13 @@ detection_threshold_filter = [ 0.02416583,  0.02566924,  0.02715293,  0.02860307
         0.03664118,  0.03581188,  0.03485598,  0.03378467,  0.03261027,
         0.03134595,  0.0300055 ,  0.02860307,  0.02715293,  0.02566924,
         0.02416583]
-dynamic_threshold_multiplier = 9
-base_threshold = 2    # noise sigmas
+dynamic_threshold_multiplier = 8
+base_threshold = 3    # noise sigmas
 bound_threshold = 1   # noise sigmas
 
 # Will linearly "detrend" baseline of each pulse during processing
 # Usually tiny effect
-detrend_baseline = False
+detrend_baseline = True
 
 
 
