Don't crash if no peaks, chunksize=inf for sql

--- a/pax/config/SQL.ini
+++ b/pax/config/SQL.ini
@@ -10,7 +10,7 @@ write_every = 1
 # This gets passed to the sqlalchemy engine creation
 # See http://docs.sqlalchemy.org/en/rel_0_9/core/engines.html
 #output_name = "sqlite:///test_output.db"
-output_name = "mysql+pymysql://xams_user:lxetpc@145.102.134.133/xams"
+output_name = "mysql+pymysql://root:WIMPfinder@localhost/xams"
 
 # Keep only high-level data
 fields_to_ignore = ['occurrences',
