--- a/pax/config/Reprocess.ini
+++ b/pax/config/Reprocess.ini
@@ -11,7 +11,7 @@ output = 'BulkOutput.BulkOutput'
 
 [BulkOutput.ReadFromBulkOutput]
 format = 'sql'                 # Format of file to read in
-input_name = 'sqlite:///test_output.db'      # Input file name, with extension
+input_name = 'mysql+pymysql://root:WIMPfinder@localhost/xams'      # Input file name, with extension
 
 chunk_size = 200                # Read in this many instances at a time from the file
 
