Bug fixes to OnlineMonitor plugin and got it running. Added compression for waveforms and removed storage of raw pulses to MongoDB (otherwise we exceeded the 16MB limit for MongoDB docs pretty often).

--- a/pax/config/_base.ini
+++ b/pax/config/_base.ini
@@ -150,12 +150,40 @@ input_name = "xe100_120402_2000_000000.xed"
 
 
 
-[OnlineMonitor.OnlineMonitor]
-address = "xedaq00"
+[OnlineMonitor.OnlineMonitorOutput]
+address = "127.0.0.1"
 database = "online"
-collection = "monitor"
-waveformcollection = "waveforms"
-
+event_collection = "monitor_events"
+aggregate_collection = "monitor_histograms"
+aggregates = [ {
+                    "name": "s2_0_energies",
+                    "type": "h1",
+                    "xaxis": {
+                        "value": "event.S2s()[0].area",
+                        "type": "expr",
+                        "bins": 10000,
+                        "min": 0,
+                        "max": 10000.
+                    }
+             },
+             {
+                    "name": "area_vs_pmt",
+                    "type": "h2",
+                    "xaxis": {
+                        "value": "np.arrange(len(event.S2s()[0].area_per_channel))",
+                        "type": "expr",
+                        "bins": "len(event.S2s()[0].area_per_channel)",
+                        "min": 0,
+                        "max": "len(event.S2s()[0].area_per_channel)"
+                    },
+                    "yaxis": {
+                        "value": "event.S2s()[0].area_per_channel",
+                        "type": "expr",
+                        "bins": 1000,
+                        "min": 0,
+                        "max": 5000,
+                    }
+             } ]
 
 [BulkOutput.BulkOutput]
 output_format = 'hdf5'      # hdf5, csv, numpy, html, json, root
