--- a/pax/config/XENON100.ini
+++ b/pax/config/XENON100.ini
@@ -28,13 +28,13 @@ dsp = [
         # Classify the clusters based on the properties
         'ClassifyPeaks.AdHocClassification',
 
+
         # Make sum waveform for plotting - disable for speed in bulk processing
         'SumWaveform.SumWaveform',
       ]
 
-transform = [
-                'PosSimple.PosRecWeightedSum',
-                'NeuralNet.PosRecNeuralNet'
+transform = [ 'PosSimple.PosRecWeightedSum',
+               'NeuralNet.PosRecNeuralNet',
             ]
 
 
