--- a/pax/config/_base.ini
+++ b/pax/config/_base.ini
@@ -87,7 +87,7 @@ waveforms_to_plot = (
         {'internal_name': 'veto_raw', 'plot_label': 'Veto (raw)',
                     'drawstyle': 'steps', 'color':'red', 'alpha': 0.2},
     )
-output_dir = None      # Output plots here. If option is None, will show interactive display.
+output_dir = 'plots'      # Output plots here. If option is None, will show interactive display.
 plot_format = 'png'    # Can be pdf or png. No effect if output_dir is set.
 plot_every = 1         # Skip plot_every-1 waveforms after plotting one
 size_multiplier = 4    # Increase/decrease to get bigger/smaller plots
@@ -102,6 +102,9 @@ plot_largest_peaks = True      # On the top row, show zoom-ins of the largest S1
 [Plotting.PlotChannelWaveforms3D]
 log_scale = False
 
+[ComputePeakProperties.SortPeaks]
+sort_key = 'area'
+sort_reverse = True
 
 ##
 # I/O Plugin default settings
