--- a/examples/muenster/MuensterTPC.ini
+++ b/examples/muenster/MuensterTPC.ini
@@ -6,8 +6,10 @@
 #This is just for setting up pax
 [pax]
 parent_configuration = "XENON100"
+plugin_paths = ['/home/axel/PycharmProjects/pax/examples/']
 
 input = 'EVE_file.EveInput'
+#show_waveforms = ['ShowWaveforms.PlotAllChannels']
 #output = 'Plotting.PlotEventSummary'
 # Global settings, passed to every plugin
 [DEFAULT]
