Stacked channel waveforms plotting

--- a/pax/config/_base.ini
+++ b/pax/config/_base.ini
@@ -99,7 +99,7 @@ log_scale_s1 = False
 [Plotting.PlotEventSummary]
 plot_largest_peaks = True      # On the top row, show zoom-ins of the largest S1, S2, and their hitpatterns
 
-[Plotting.PlotChannelWaveforms3D]
+[Plotting.PlotStackedChannelWaveforms]
 log_scale = False
 
 
