--- a/examples/muenster/MuensterTPC.ini
+++ b/examples/muenster/MuensterTPC.ini
@@ -6,7 +6,7 @@
 #This is just for setting up pax
 [pax]
 parent_configuration = "XENON100"
-plugin_paths = ['/home/axel/PycharmProjects/pax/examples/']
+plugin_paths = ['examples/']
 
 input = 'EVE_file.EveInput'
 #show_waveforms = ['ShowWaveforms.PlotAllChannels']
