merrged with master branch

--- a/pax/config/_base.ini
+++ b/pax/config/_base.ini
@@ -125,7 +125,7 @@ waveformcollection = "waveforms"
 
 
 [BulkOutput.BulkOutput]
-output_format = 'hdf5'      # hdf5, csv, numpy, html, json, root
+output_format = 'hdf5'      # hdf5, csv, numpy, html, json, root, hdf5_pandas
 output_name = 'output'
 
 append_data = False
