--- a/examples/muenster/MuensterTPC.ini
+++ b/examples/muenster/MuensterTPC.ini
@@ -103,3 +103,6 @@ transition_point = 50  #pe
 
 # ... a tighter gap threshold:
 small_gap_threshold = 10 * ns
+
+#[BulkOutput.BulkOutput]
+#output_format = 'hdf5_pandas'      # hdf5, csv, numpy, html, json, root, hdf5_pandas
