--- a/pax/config/XENON100.ini
+++ b/pax/config/XENON100.ini
@@ -18,8 +18,7 @@ dsp = [
         'HitFinder.FindHits',
 
         # Combine hits into clusters = peaks
-        #'Cluster.MeanShift',
-        'Cluster.GapSize',
+        'Cluster.NaturalBreaks',
 
         # Compute properties for each peak
         'ComputePeakProperties.BasicProperties',
@@ -35,56 +34,39 @@ dsp = [
 transform = [
                 'PosSimple.PosRecWeightedSum',
                 'NeuralNet.PosRecNeuralNet',
-                'PosRecChiSquareGamma.PosRecChiSquareGamma'
+                'PosRecChiSquareGamma.PosRecChiSquareGamma',
+                'MaxPMT.PosRecMaxPMT',
             ]
 
 
 
 [HitFinder.FindHits]
+# For detailed description of what these settings do, see the documentation / plugin docstring.
+
 # Compute baseline on first n samples in pulse:
 initial_baseline_samples = 40
 
 # Max hits to look for in each pulse: rest will be ignored
-# After large peaks the zero-length encoding can fail, making a huge pulse with many hits
-# If set too low, you risk missing some hits in such events.
-# If set too high, it will degrade performance (though the effect appears to be small)
-# Don't set to infinity though: we need to allocate memory for this...
 max_hits_per_pulse = 1000
 
 # Diagnostic plots settings
 make_diagnostic_plots = 'never'     # Can be always, never, tricky cases, no hits, hits only
 make_diagnostic_plots_in = 'hitfinder_diagnostic_plots'
 
-##
-# The pax hitfinder can work with three types of thresholds.
-# If several are enabled (are set > 0), the highest threshold is used in each event.
-#   - A hit has to pass the high_threshold somewhere
-#   - A hit starts/ ends when it passes the low_threshold.
-# In what follows high/positive means 'signal like' (i.e. the PMT voltage becomes more negative)
-##
-
 # Threshold 1: Height / noise.
-# This threshold operates on the height above baseline / noise level
-# The noise level is deteremined in each pulse as
-#   (<(w - baseline)**2>)**0.5
-# with the average running *only* over samples < baseline!
 height_over_noise_high_threshold = 8       # Reasonable and conservative for run10: see xenon:xenon100:analysis:led_pax
 height_over_noise_low_threshold = 1
 
 # Threshold 2: Absolute ADC counts above baseline
-# If there is measurable noise in the waveform, you don't want the thresholds to fall to 0 and crash pax.
-# This happens for pulses constant on initial_baseline_samples.
-# Please use this as a deep fallback only, unless you know what mess you're getting yourself into!
 absolute_adc_counts_high_threshold = 1   # ADC counts
 absolute_adc_counts_low_threshold = 1   # ADC counts
 
 # Threshold 3:  - Height / minimum
-# This threshold operates on the (-) height above baseline / height below baseline of the lowest sample in pulse
-# Using this threshold protects you against sudden up & down fluctuations, especially in large pulses
-# However, keep in mind that one large downfluctuation will cause a sensitivity loss throughout an entire pulse;
-# if you have ZLE off, this may be a bad idea...
 height_over_min_high_threshold = 2
 height_over_min_low_threshold = 0
+
+# Raise low threshold temporarily to fraction of hit height for rest of pulse
+dynamic_low_threshold_coeff = 0.01
 
 
 [Cluster]
@@ -120,6 +102,20 @@ transition_point = 50  #pe
 small_gap_threshold = 100 * ns
 
 
+[Cluster.NaturalBreaks]
+# Always break if a gap of this size is encountered
+max_gap_size_in_cluster = 600 * ns
+
+# Lambda function in string - n = number of hits, result is split goodness threshold
+min_split_goodness = 'lambda n : max(0.1, 1.2 - 1.1/150 * n)'
+
+# Limit gaps to test for performance reasons
+# Haven't tested if these are actually harmful, needed, or effective...
+min_gap_size_for_break = 50 * ns
+max_n_gaps_to_test = float('inf')
+
+
+
 ##
 # Simulator-specific settings
 ##
@@ -130,7 +126,7 @@ cheap_zle =                           False              # If True, will generat
                                                          # If False, generates noise in all channels everywhere. You may want to activate the software ZLE plugin!
 event_padding =                       5 * us             # Padding in the event before the first and after the last photon.
                                                          # if you use the cheap_zle, bad things happen if this is smaller than the zle padding
-gaus_noise_sigma         =            0   #0.05 #pe/bin  # Sigma of Gaussian noise to apply to waveform. Set to 0 if you want only real noise.
+gauss_noise_sigma        =            0   #0.05 #pe/bin  # Sigma of Gaussian noise to apply to waveform. Set to 0 if you want only real noise.
 real_noise_file =                    'noise_120326.npy'  # Must be a numpy.savez_compressed file containing 1 numpy array (row per channel) of noise data
                                                          # Set to None or False if you don't want to use real noise
 real_noise_sample_size =              150                # Data is concatenated in noise file: this specifies original sample size. We'll take these samples and shuffle them.
@@ -190,8 +186,9 @@ triplet_lifetime_gas      =           115*ns              # Jelle: Fit to Xenon1
                                                           # Nest 2014: 100.1*ns +- 7.9
 singlet_fraction_gas      =           0                   # Jelle: Fit to Xenon100 single-e S2s xenon:xenon100:analysis:single_e_waveform_model
 
-
-
+# Light distribution
+s2_lce_map =                          's2_xy_lce_map_XENON100_Xerawdp0.4.5.json.gz'
+s2_mean_area_fraction_top =           0.555               # S2 asymmetry average = 0.11, top fraction = (1 + A)/2. Todo: check / add ref!
 
 
 
@@ -199,11 +196,12 @@ singlet_fraction_gas      =           0                   # Jelle: Fit to Xenon1
 # Global settings, passed to every plugin
 [DEFAULT]
 tpc_name = "XENON100"
+tpc_length = 30 * cm          # PLACEHOLDER... anyone not-lazy enough to actually look up the exact measurements?
 
 tpc_radius = 15.3 * cm
 
 # Time in the event at which trigger occurs. Set to None or leave out if there is no trigger
-trigger_time_in_event = 209 * us    # Jelle: I have no idea if this is right. Anybody?
+trigger_time_in_event = 200 * us    # PLACEHOLDER... anyone not-lazy enough to actually look up the exact measurements?
 
 pmt_0_is_fake = True
 
