Added some analysis examples

--- a/examples/muenster/MuensterTPC2.ini
+++ b/examples/muenster/MuensterTPC2.ini
@@ -66,7 +66,7 @@ channels_top = [7, 8, 9, 10, 11, 12, 13]
 # PMT locations taken from technical drawing of Muenster TPC
 # Whether they are in correct order has to be confirmed yet
 # Note: don't forget the units...
-
+tpc_radius = 4 * cm
 pmt_locations = [
                 {'x':  -2.900 * cm, 'y':  -1.450 * cm},  # 0 ↓↓↓ bottom ↓↓↓
                 {'x':  -2.900 * cm, 'y':  +1.450 * cm},  # 1
