commit before merging with master

--- a/examples/muenster/MuensterTPC2.ini
+++ b/examples/muenster/MuensterTPC2.ini
@@ -6,7 +6,7 @@
 #This is just for setting up pax
 [pax]
 parent_configuration = "XENON100"
-plugin_paths = ['examples/']
+plugin_paths = ['/home/axel/PycharmProjects/pax/examples/muenster']
 
 input = 'EVE_file.EveInput'
 #show_waveforms = ['ShowWaveforms.PlotAllChannels']
@@ -21,14 +21,14 @@ dsp = [
         'HitFinder.FindHits',
 
         # Combine hits into clusters = peaks
-        'Cluster.NaturalBreaks',
+        #'Cluster.NaturalBreaks',
 
         # Compute properties for each peak
-        'ComputePeakProperties.BasicProperties',
-        'ComputePeakProperties.HitpatternSpread',
+        #'ComputePeakProperties.BasicProperties',
+        #'ComputePeakProperties.HitpatternSpread',
 
         # Classify the clusters based on the properties
-        'ClassifyPeaks.AdHocClassification',
+        #'ClassifyPeaks.AdHocClassification',
 
         # Make sum waveform for plotting - disable for speed in bulk processing
         'SumWaveform.SumWaveform',
@@ -40,7 +40,7 @@ transform = [
                # 'PosRecChiSquareGamma.PosRecChiSquareGamma',
                # 'MaxPMT.PosRecMaxPMT',
             ]
-
+output = 'BulkOutput.BulkOutput'
 
 [DEFAULT]
 tpc_name = "MuensterTPC"
@@ -130,5 +130,8 @@ transition_point = 50  #pe
 # ... a tighter gap threshold:
 small_gap_threshold = 10 * ns
 
-#[BulkOutput.BulkOutput]
+[BulkOutput.BulkOutput]
 #output_format = 'hdf5_pandas'      # hdf5, csv, numpy, html, json, root, hdf5_pandas
+# Don't leave out hits and pulses -- that's what we're after!
+fields_to_ignore = ['hits',
+                   ]
