smaller things to make MuensterTPC2.ini work with renamed Output class

--- a/examples/muenster/MuensterTPC2.ini
+++ b/examples/muenster/MuensterTPC2.ini
@@ -130,7 +130,7 @@ transition_point = 50  #pe
 # ... a tighter gap threshold:
 small_gap_threshold = 10 * ns
 
-[BulkOutput.BulkOutput]
+[Table.TableWriter]
 #output_format = 'hdf5_pandas'      # hdf5, csv, numpy, html, json, root, hdf5_pandas
 # Don't leave out hits and pulses -- that's what we're after!
 fields_to_ignore = ['hits',
