Long term storage BSON support using delta compression

--- a/pax/config/_base.ini
+++ b/pax/config/_base.ini
@@ -243,3 +243,7 @@ use_simplified_simulator_from =       5000 #photons      # Use faster, though sl
 pulse_width_cutoff =                  5                  # Assume PMT pulse is 0 after this many rise/fall times. Does not impact performance greatly.
 pmt_pulse_time_rounding =             1 * ns             # Round PMT pulse start time to this resolution, so we can exploit caching.
 
+[BSON.LTSWriteBSON]
+
+dist = 2 # bytes for delta compressor
+preset = 9 # See Python docs on lzma's preset flag
