further adjustments to fit to Münster TPC

--- a/examples/muenster/MuensterTPC2.ini
+++ b/examples/muenster/MuensterTPC2.ini
@@ -6,7 +6,7 @@
 #This is just for setting up pax
 [pax]
 parent_configuration = "XENON100"
-plugin_paths = ['/home/axel/PycharmProjects/pax/examples/muenster']
+plugin_paths = ['examples/muenster']
 
 input = 'EVE_file.EveInput'
 #show_waveforms = ['ShowWaveforms.PlotAllChannels']
@@ -66,6 +66,7 @@ channels_top = [7, 8, 9, 10, 11, 12, 13]
 # PMT locations taken from technical drawing of Muenster TPC
 # Whether they are in correct order has to be confirmed yet
 # Note: don't forget the units...
+tpc_length = 17 * cm
 tpc_radius = 4 * cm
 pmt_locations = [
                 {'x':  -2.900 * cm, 'y':  -1.450 * cm},  # 0 ↓↓↓ bottom ↓↓↓
@@ -119,6 +120,7 @@ waveforms_to_plot = (
 make_diagnostic_plots = "never"
 # Compute baseline on first n samples in pulse:
 initial_baseline_samples = 28   # When using ZLE this must not be higher than 2x zle_nlbk as the peaks will be counted in otherwise
+height_over_noise_high_threshold = 4
 
 [Cluster.GapSize]
 # If there is a gap between hits larger than this, it will make a new cluster
