Made ini files work with zle data

--- a/examples/muenster/MuensterTPC2.ini
+++ b/examples/muenster/MuensterTPC2.ini
@@ -40,7 +40,7 @@ transform = [
                # 'PosRecChiSquareGamma.PosRecChiSquareGamma',
                # 'MaxPMT.PosRecMaxPMT',
             ]
-output = 'Table.TableWriter'
+#output = 'Table.TableWriter'
 
 [DEFAULT]
 tpc_name = "MuensterTPC"
@@ -132,8 +132,8 @@ transition_point = 50  #pe
 # ... a tighter gap threshold:
 small_gap_threshold = 10 * ns
 
-[Table.TableWriter]
+#[Table.TableWriter]
 #output_format = 'hdf5_pandas'      # hdf5, csv, numpy, html, json, root, hdf5_pandas
 # Don't leave out hits and pulses -- that's what we're after!
-fields_to_ignore = ['hits',
-                   ]
+#fields_to_ignore = ['hits',
+#                   ]
