--- a/examples/muenster/MuensterTPC_new.ini
+++ b/examples/muenster/MuensterTPC_new.ini
@@ -6,36 +6,57 @@
 # This config contains the gain calibrated values of Julian B.'s measurements with a green LED at room temperature
 [pax]
 parent_configuration = "../../examples/muenster/MuensterTPC2"
+plugin_paths = ['examples/muenster']
+
 
 dsp = [
-        # Do some sanity checks / cleaning on pulses
-        'CheckPulses.ConcatenateAdjacentPulses',
-        'CheckPulses.CheckBounds',
+            # Do some sanity checks / cleaning on pulses
+            #'CheckPulses.SortPulses',
+            'CheckPulses.ConcatenateAdjacentPulses',
+            'CheckPulses.CheckBounds',
 
-        # Find individual hits
-        'HitFinder.FindHits',
+            # Find individual hits
+            'HitFinder.FindHits',
 
-        # Combine hits into clusters = peaks
-        'Cluster.NaturalBreaks',
+            # Combine hits into rough clusters = peaks
+            'BuildPeaks.GapSizeClustering',
 
-        # Compute properties for each peak
-        'ComputePeakProperties.BasicProperties',
-        'ComputePeakProperties.HitpatternSpread',
+            # Reject hits in noisy channels
+            'RejectNoiseHits.RejectNoiseHits',
+            'SumWaveform.SumWaveform',  # Must do this AFTER noisy hit rejection!
 
-        # Classify the clusters based on the properties
-        'ClassifyPeaks.AdHocClassification',
+            # Refine the clustering / split peaks
+            'NaturalBreaksClustering.NaturalBreaksClustering',
 
-        # Make sum waveform for plotting - disable for speed in bulk processing
-        'SumWaveform.SumWaveform',
-      ]
+            # Compute sum-waveform and hit-dependent properties for each peak
+            'BasicProperties.BasicProperties',
+            'BasicProperties.SumWaveformProperties',
+            'BasicProperties.CountCoincidentNoisePulses'
+        ]
 
-transform = [
-               # 'PosSimple.PosRecWeightedSum',
-               # 'NeuralNet.PosRecNeuralNet',
-               # 'PosRecChiSquareGamma.PosRecChiSquareGamma',
-               # 'MaxPMT.PosRecMaxPMT',
-            ]
-#output = 'Table.TableWriter'
+# Compute peak properties: can be redone from processed data file
+compute_properties = [
+#                        'WeightedSum.PosRecWeightedSum',
+                        'MaxPMT.PosRecMaxPMT',
+#                        'RobustWeightedMean.PosRecRobustWeightedMean',
+#                        'NeuralNet.PosRecNeuralNet',
+#                        'ChiSquareGamma.PosRecChiSquareGamma',
+#                        'HitpatternSpread.HitpatternSpread',
+                     ]
+
+# Final stage with 'risky' operations: peak classification, S1/S2 pairing, corrections
+# Intentionally last, so reclassification takes least work
+pre_analysis = [
+                # Classify the clusters based on the properties
+                'ClassifyPeaks.AdHocClassification',
+
+                # Combine S1 and S2 into pairs = interactions and compute properties
+                # which depend on S1 AND S2 specific information (i.e. z-corrections)
+                'BuildInteractions.BuildInteractions',
+                'BuildInteractions.BasicInteractionProperties',
+               ]
+
+output = 'Table.TableWriter'
 
 [DEFAULT]
 # Time in the event at which trigger occurs. Set to None or leave out if there is no trigger
@@ -56,6 +77,30 @@ gain_sigmas = [
         1.330e6 ,        1.372e6,          1.493e6,          1.605e6,          1.176e6,         1.574e6,         0.288e6,
         ]
 
+channels_bottom = [0, 1, 2, 3, 4, 5, 6]
+channels_top = [7, 8, 9, 10, 11, 12, 13]
+
+# PMT locations taken from technical drawing of Muenster TPC
+# Whether they are in correct order has to be confirmed yet
+# Note: don't forget the units...
+tpc_length = 17 * cm
+tpc_radius = 4 * cm
+pmt_locations = [
+                {'x':  -2.900 * cm, 'y':  -1.450 * cm},  # 0 ↓↓↓ bottom ↓↓↓
+                {'x':  -2.900 * cm, 'y':  +1.450 * cm},  # 1
+                {'x':   0.000 * cm, 'y':  +2.900 * cm},  # 2
+                {'x':   0.000 * cm, 'y':   0.000 * cm},  # 3
+                {'x':   0.000 * cm, 'y':  -2.900 * cm},  # 4
+                {'x':   2.900 * cm, 'y':  -1.450 * cm},  # 5
+                {'x':   2.900 * cm, 'y':   1.450 * cm},  # 6
+                {'x':  -2.900 * cm, 'y':  -1.450 * cm},  # 7 ↓↓↓ top ↓↓↓
+                {'x':  -2.900 * cm, 'y':  +1.450 * cm},  # 8
+                {'x':   0.000 * cm, 'y':  +2.900 * cm},  # 9
+                {'x':   0.000 * cm, 'y':   0.000 * cm},  # 10
+                {'x':   0.000 * cm, 'y':  -2.900 * cm},  # 11
+                {'x':   2.900 * cm, 'y':  -1.450 * cm},  # 12
+                {'x':   2.900 * cm, 'y':   1.450 * cm},  # 13
+                ]
 [Plotting]
 waveforms_to_plot = (
                     {'internal_name': 'tpc',      'plot_label': 'TPC (hits only)',
