--- a/examples/muenster/MuensterTPC_new.ini
+++ b/examples/muenster/MuensterTPC_new.ini
@@ -37,7 +37,7 @@ dsp = [
 # Compute peak properties: can be redone from processed data file
 compute_properties = [
 #                        'WeightedSum.PosRecWeightedSum',
-                        'MaxPMT.PosRecMaxPMT',
+#                        'MaxPMT.PosRecMaxPMT',
 #                        'RobustWeightedMean.PosRecRobustWeightedMean',
 #                        'NeuralNet.PosRecNeuralNet',
 #                        'ChiSquareGamma.PosRecChiSquareGamma',
@@ -52,8 +52,8 @@ pre_analysis = [
 
                 # Combine S1 and S2 into pairs = interactions and compute properties
                 # which depend on S1 AND S2 specific information (i.e. z-corrections)
-                'BuildInteractions.BuildInteractions',
-                'BuildInteractions.BasicInteractionProperties',
+#                'BuildInteractions.BuildInteractions',
+#                'BuildInteractions.BasicInteractionProperties',
                ]
 
 output = 'Table.TableWriter'
