--- a/examples/muenster/MuensterTPC_new.ini
+++ b/examples/muenster/MuensterTPC_new.ini
@@ -156,8 +156,7 @@ small_gap_threshold = 10 * ns
 #[Table.TableWriter]
 #output_format = 'hdf5_pandas'      # hdf5, csv, numpy, html, json, root, hdf5_pandas
 # Don't leave out hits and pulses -- that's what we're after!
-#fields_to_ignore = ['hits',
-#                    'raw data',
-#                    'channel_waveforms',
-#                   'sum_waveform',
-#                   ]
+fields_to_ignore = ['raw data',
+                    'channel_waveforms',
+                   'sum_waveform',
+                   ]
