Update to mongo organization in online monitor

--- a/pax/config/OnlineMonitor.ini
+++ b/pax/config/OnlineMonitor.ini
@@ -5,14 +5,22 @@ input = 'XED.XedInput'
 output = 'OnlineMonitor.OnlineMonitorOutput'
 
 [XED.XedInput]
-input_name = "/home/dan/data/xe100_130421_1809_000000.xed"
+input_name = "/home/dan/data/xe100_130519_1747/xe100_130519_1747_000001.xed"
 
 [OnlineMonitor.OnlineMonitorOutput]
 address = "127.0.0.1"
-database = "online"
+database = "monitor"
+dynamic_collections = True
+
+# Size of capped collection in bytes
+waveform_capped_size = 50000000
+
+# If dynamic_collections is false you have to define the 
+# collection names here explicitly
 event_collection = "monitor_events"
 aggregate_collection = "monitor_histograms"
 plot_collection = "monitor_plots"
+
 aggregates = [
                 {
                     "name": "S2(0) Energies",
