moved ClassifyPeaks_gastpcms.py to muenster folder

--- a/examples/muenster/MSTPC_Kr83m_gas_only.ini
+++ b/examples/muenster/MSTPC_Kr83m_gas_only.ini
@@ -55,7 +55,7 @@ pre_analysis = [
 #                'BuildInteractions.BasicInteractionProperties',
                ]
 
-output = 'Table.TableWriter'
+#output = 'Table.TableWriter'
 
 [DEFAULT]
 tpc_name = "MuensterTPC"
@@ -63,7 +63,7 @@ tpc_name = "MuensterTPC"
 
 
 # Time in the event at which trigger occurs. Set to None or leave out if there is no trigger
-trigger_time_in_event = 2560 * ns    # Check settings in caen1724.par
+trigger_time_in_event = 256 * ns    # Check settings in caen1724.par
 
 pmt_0_is_fake = False      # TODO
 
@@ -164,11 +164,13 @@ max_gap_size_in_cluster = 10 * ns
 
 
 
-#[Table.TableWriter]
+[Table.TableWriter]
 #output_format = 'hdf5_pandas'      # hdf5, csv, numpy, html, json, root, hdf5_pandas
 # Don't leave out hits and pulses -- that's what we're after!
-#fields_to_ignore = ['hits',
-#                    'raw data',
-#                    'channel_waveforms',
-#                   'sum_waveform',
-#                   ]
+fields_to_ignore = ['sum_waveforms',
+                    'channel_waveforms',
+                    'all_hits',
+                    'raw_data',
+                    #'hits',
+                    'pulses',
+                   ]
