made pos rec work with high indices PMTs. Position reconstruction algorithms expected the top PMTs to have low indices (0...N/2). Now that's not necessary anymore.

--- a/examples/muenster/MSTPC_Kr83m_gas_only.ini
+++ b/examples/muenster/MSTPC_Kr83m_gas_only.ini
@@ -35,8 +35,8 @@ dsp = [
 
 # Compute peak properties: can be redone from processed data file
 compute_properties = [
-#                        'WeightedSum.PosRecWeightedSum',
-#                        'MaxPMT.PosRecMaxPMT',
+                        'WeightedSum.PosRecWeightedSum',
+                        'MaxPMT.PosRecMaxPMT',
 #                        'RobustWeightedMean.PosRecRobustWeightedMean',
 #                        'NeuralNet.PosRecNeuralNet',
 #                        'ChiSquareGamma.PosRecChiSquareGamma',
@@ -174,3 +174,6 @@ fields_to_ignore = ['sum_waveforms',
                     #'hits',
                     'pulses',
                    ]
+
+[WaveformSimulator]
+s2_patterns_file = None
