--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 # Config file for automatic testing at travis-ci.org
 
-language: python
-
+#language: python
+language:
+- objective-c
 #sudo: false
 
 python:
