expand build matrix.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,71 +19,71 @@ services:
   - mongodb
 
 matrix:
-    include:
-	-language: generic
-	os: osx
-      	env: TRAVIS_PYTHON_VERSION=2.7
-      	env: ROOT=5
-      	-language: generic
-      	os: osx
-      	env: TRAVIS_PYTHON_VERSION=3.4
-      	env: ROOT=5
-      	-language: generic
-      	os: osx
-      	env: TRAVIS_PYTHON_VERSION=2.7
-      	env: ROOT=6
-      	-language: generic
-      	os: osx
-      	env: TRAVIS_PYTHON_VERSION=3.4
-      	env: ROOT=6
-      	- python: 2.7
-      	env: 
-      	  - ROOT=5
-      	  - ROOT=6
-      	addons:
-      	  apt:
-      	    sources:
-      	    - ubuntu-toolchain-r-test
-      	    packages:
-      	    - build-essential
-      	    - git
-      	    - dpkg-dev
-      	    - make
-      	    - binutils
-      	    - libx11-dev
-      	    - libxpm-dev
-      	    - libxft-dev
-      	    - libxext-dev
-      	    - gcc-multilib
-      	    #    - libsnappy1
-      	    #    - libsnappy-dev
-      	    - python-software-properties
-      	    - gcc-4.8
-      	    - g++-4.8
-      	- python: 3.4
-      	env: 
-      	  - ROOT=5
-      	  - ROOT=6
-      	addons:
-      	  apt:
-      	    sources:
-      	    - ubuntu-toolchain-r-test
-      	    packages:
-      	    - build-essential
-      	    - git
-      	    - dpkg-dev
-      	    - make
-      	    - binutils
-      	    - libx11-dev
-      	    - libxpm-dev
-      	    - libxft-dev
-      	    - libxext-dev
-      	    - gcc-multilib
-      	    #    - libsnappy1
-      	    #    - libsnappy-dev
-      	    - python-software-properties
-      	    - gcc-4.8
-      	    - g++-4.8
+  allow_failures:
+    - os: osx 
+  include:
+    -language: generic
+    os: osx
+    env: TRAVIS_PYTHON_VERSION=2.7
+    env: ROOT=5
+    -language: generic
+    os: osx
+    env: TRAVIS_PYTHON_VERSION=3.4
+    env: ROOT=5
+    -language: generic
+    os: osx
+    env: TRAVIS_PYTHON_VERSION=2.7
+    env: ROOT=6
+    -language: generic
+    os: osx
+    env: TRAVIS_PYTHON_VERSION=3.4
+    env: ROOT=6
+    - python: 2.7
+    env: 
+      - ROOT=5
+      - ROOT=6
+    addons:
+      apt:
+        sources:
+      	- ubuntu-toolchain-r-test
+      	packages:
+      	- build-essential
+      	- git
+      	- dpkg-dev
+      	- make
+      	- binutils
+      	- libx11-dev
+      	- libxpm-dev
+      	- libxft-dev
+      	- libxext-dev
+      	- gcc-multilib
+      	#    - libsnappy1
+      	#    - libsnappy-dev
+      	- python-software-properties
+      	- gcc-4.8
+      	- g++-4.8
+    - python: 3.4
+    env: 
+      - ROOT=5
+      - ROOT=6
+    addons:
+      apt:
+        sources:
+      	- ubuntu-toolchain-r-test
+      	packages:
+        - build-essential
+        - git
+        - dpkg-dev
+        - make
+        - binutils
+        - libx11-dev
+        - libxpm-dev
+        - libxft-dev
+        - libxext-dev
+        - gcc-multilib
+        - python-software-properties
+        - gcc-4.8
+        - g++-4.8
 
 
 before_install:
