Protect against ZLE breakdown

--- a/pax/config/XENON100.ini
+++ b/pax/config/XENON100.ini
@@ -82,13 +82,16 @@ height_over_noise_low_threshold = 1
 absolute_adc_counts_high_threshold = 1   # ADC counts
 absolute_adc_counts_low_threshold = 1   # ADC counts
 
-
 # Threshold 3:  - Height / minimum
 height_over_min_high_threshold = 2
 height_over_min_low_threshold = 0
 
 # Raise low threshold temporarily to fraction of hit height for rest of pulse
 dynamic_low_threshold_coeff = 0.01
+
+# Protection against ZLE breakdown
+# Ignore pulses which reach to the end and are longer than ...
+terminal_pulse_length_threshold = 10 * us
 
 [BuildPeaks.GapSizeClustering]
 # Start a new cluster / peak if a gap larger than this is encountered
