--- a/pax/config/XENON100_LED.ini
+++ b/pax/config/XENON100_LED.ini
@@ -15,8 +15,9 @@ input = 'XED.ReadXED'
 output = 'Table.TableWriter'
 
 
-#[HitFinder.FindHits]
-#make_diagnostic_plots = 'hits only'
+[HitFinder.FindHits]
+# Zero-length encoding is off in LED mode, so we should turn of ZLE breakdown protection too
+terminal_pulse_length_threshold = float('inf')
 
 
 [Table.TableWriter]
