removed RejectNoiseHits from MSTPC_Kr83m_gas_only.ini

--- a/examples/muenster/MSTPC_Kr83m_gas_only.ini
+++ b/examples/muenster/MSTPC_Kr83m_gas_only.ini
@@ -24,7 +24,7 @@ dsp = [
             'BuildPeaks.GapSizeClustering',
 
             # Reject hits in noisy channels
-            'RejectNoiseHits.RejectNoiseHits',
+            #'RejectNoiseHits.RejectNoiseHits',
             'SumWaveform.SumWaveform',  # Must do this AFTER noisy hit rejection!
 
             # Compute sum-waveform and hit-dependent properties for each peak
