removed RejectNoiseHits from MSTPC_Kr83m_gas_only.ini

--- a/examples/muenster/MSTPC_Kr83m_gas_only.ini
+++ b/examples/muenster/MSTPC_Kr83m_gas_only.ini
@@ -19,18 +19,18 @@ dsp = [
             'CheckPulses.CheckBounds',
 
             # Find individual hits
-            'HitFinder.FindHits',
+             'HitFinder.FindHits',
             # Combine hits into rough clusters = peaks
-            'BuildPeaks.GapSizeClustering',
+            #'BuildPeaks.GapSizeClustering',
 
             # Reject hits in noisy channels
             #'RejectNoiseHits.RejectNoiseHits',
-            'SumWaveform.SumWaveform',  # Must do this AFTER noisy hit rejection!
+            #'SumWaveform.SumWaveform',  # Must do this AFTER noisy hit rejection!
 
             # Compute sum-waveform and hit-dependent properties for each peak
-            'BasicProperties.BasicProperties',
-            'BasicProperties.SumWaveformProperties',
-            'BasicProperties.CountCoincidentNoisePulses'
+            #'BasicProperties.BasicProperties',
+            #'BasicProperties.SumWaveformProperties',
+            #'BasicProperties.CountCoincidentNoisePulses'
         ]
 
 # Compute peak properties: can be redone from processed data file
@@ -47,7 +47,7 @@ compute_properties = [
 # Intentionally last, so reclassification takes least work
 pre_analysis = [
                 # Classify the clusters based on the properties
-                'ClassifyPeaks_gastpcms.AdHocClassification',
+                # 'ClassifyPeaks_gastpcms.AdHocClassification',
 
                 # Combine S1 and S2 into pairs = interactions and compute properties
                 # which depend on S1 AND S2 specific information (i.e. z-corrections)
