--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@
 
 language: python
 
-sudo: false
+sudo: required
+dist: trusty
 
 python:
   - 2.7
@@ -48,7 +49,7 @@ addons:
     #- g++-4.8
 
 os:
-  - osx
+#  - osx
   - linux
   
 matrix:
