--- a/examples/muenster/MSTPC_Kr83m_gas_only.ini
+++ b/examples/muenster/MSTPC_Kr83m_gas_only.ini
@@ -47,7 +47,7 @@ compute_properties = [
 # Intentionally last, so reclassification takes least work
 pre_analysis = [
                 # Classify the clusters based on the properties
-#                 'ClassifyPeaks_gastpcms.AdHocClassification',
+                 'ClassifyPeaks_gastpcms.AdHocClassification',
 
                 # Combine S1 and S2 into pairs = interactions and compute properties
                 # which depend on S1 AND S2 specific information (i.e. z-corrections)
