--- a/examples/muenster/MSTPC_Kr83m_gas_only.ini
+++ b/examples/muenster/MSTPC_Kr83m_gas_only.ini
@@ -22,6 +22,7 @@ dsp = [
              'HitFinder.FindHits',
             # Combine hits into rough clusters = peaks
             'BuildPeaks.GapSizeClustering',
+      'NaturalBreaksClustering.NaturalBreaksClustering',
 
             # Reject hits in noisy channels
             'RejectNoiseHits.RejectNoiseHits',
@@ -130,9 +131,9 @@ waveforms_to_plot = (
 [HitFinder.FindHits]
 make_diagnostic_plots = "never"
 # Compute baseline on first n samples in pulse:
-initial_baseline_samples = 26   # When using ZLE this must not be higher than 2x zle_nlbk as the peaks will be counted in otherwise
+initial_baseline_samples = 20   # When using ZLE this must not be higher than 2x zle_nlbk as the peaks will be counted in otherwise
 height_over_noise_high_threshold = 8
-height_over_noise_low_threshold = 1
+height_over_noise_low_threshold = 2
 
 [Cluster]
 # Suspicious channel rejection settings
@@ -184,7 +185,34 @@ fields_to_ignore = ['sum_waveforms',
                     'all_hits',
                     'raw_data',
                     #'hits',
-                    #'pulses',
+                   'pulses',
+                   'detector',
+                   'n_reconstructed_positions',
+                   'reconstructed_positions_start',
+                   'area_fraction_top',
+                   'area_midpoint',
+                   'area_per_channel',
+                   'birthing_split_fraction',
+                   'birthing_split_goodness',
+                   'bottom_hitpattern_spread',
+                   'hit_time_mean',
+                   'hit_time_std',
+                   'hits_fraction_top',
+                   'interior_split_fraction',
+                   'interior_split_goodness',
+                   'left',
+                   'lone_hit_channel',
+                   'mean_amplitude_to_noise',
+                   'n_hits',
+                   'n_noise_pulses',
+                   'n_saturated_channels',
+                   'n_saturated_per_channel',
+                   'n_saturated_samples',
+                   'range_area_decile',
+                   'right',
+                   'sum_waveform',
+                   'sum_waveform_top',
+                   'top_hitpattern_spread',
                    ]
 
 [WaveformSimulator]
